--- a/WE4_PM_20220708.ipynb
+++ b/WE4_PM_20220708.ipynb
@@ -402,12 +402,138 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "_WKr48Fcaf0-"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def make_num_pyramid(size: int) -> list:\n",
+        "    return [line(i) for i in range(size)]\n",
+        "\n",
+        "def line(n: int) -> list:\n",
+        "    start = f(n)\n",
+        "    limit = g(n)\n",
+        "    return [f'{i}' for i in range(start, limit)]"
+      ],
+      "metadata": {
+        "id": "drEr8hhnV3r8"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(make_num_pyramid(5))"
+      ],
+      "metadata": {
+        "id": "qOlVwQuFZ2tg"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "t1 = '''\n",
+        "  1\n",
+        "  2  3\n",
+        "  4  5  6\n",
+        "  7  8'''\n"
+      ],
+      "metadata": {
+        "id": "7Xfx3KWwaAqr"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(t1)"
+      ],
+      "metadata": {
+        "id": "JopuFIrGapU2"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def f(n):\n",
+        "    try:\n",
+        "        f.stat += 1\n",
+        "    except:\n",
+        "        f.stat = 0\n",
+        "    if f.stat % 2 == 0:\n",
+        "        return n * \"e\"\n",
+        "    else:\n",
+        "        return n * 'O'"
+      ],
+      "metadata": {
+        "id": "zlBNyDctauRC"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "f(3)"
+      ],
+      "metadata": {
+        "id": "4xZDo4Aacx_Q"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "f(4)"
+      ],
+      "metadata": {
+        "id": "zo7cJ6nZc4R_"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "seconds = 36000 + 17 * 60 + 3"
+      ],
+      "metadata": {
+        "id": "quZLM5GJeLJe"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "f'{(seconds//3600):02}:{((seconds%3600)//60):02}:{(seconds%60):02}'"
+      ],
+      "metadata": {
+        "id": "JOyEu3cdc6gu"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "code",
       "source": [
         ""
       ],
       "metadata": {
-        "id": "drEr8hhnV3r8"
+        "id": "4c9ghkSFeFX_"
       },
       "execution_count": null,
       "outputs": []
